# mcp-x

./: .gitignore  README.md  devto-post.md  pyproject.toml
.github/workflows/: ci.yml
docs/plans/: 2026-03-02-mcp-x.md
src/mcp_x/: __init__.py  cli.py  config.py  detector.py  enhancer.py  loader.py  server.py
src/mcp_x/parsers/: cli.py  openapi.py
tests/: test_cli.py  test_cli_parser.py  test_config.py  test_detector.py  test_enhancer.py  test_loader.py  test_openapi_parser.py  test_server.py
